--- a/ascii.html
+++ b/ascii.html
@@ -13,7 +13,7 @@
     <div class="mybox">
         <h1>CSE 190 M ASCII Animation Viewer</h1>
         <div class="viewground">
-            <textarea id="mytextarea"></textarea>
+            <textarea id="mytextarea" rows="20" cols="80"></textarea>
             <div class="contoller">
                 <div class="box_div">
                     <h6>Play Control :</h6>
